// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders 1`] = `
<button
  class="sc-bdvuGq sc-gsDLol nounu enJXvF"
>
  foo
</button>
`;

exports[`renders as a secondary button 1`] = `
<button
  class="sc-bdvuGq sc-gsDLol jPrSNB enJXvF"
>
  foo
</button>
`;
